infra/k8s/jobs/fix-gpu-timeout.yml
apiVersion: v1
kind: Pod
metadata:
  name: fix-gpu-timeout
  namespace: realestate
spec:
  nodeSelector:
    kubernetes.io/hostname: inference
  hostPID: true
  restartPolicy: Never
  containers:
    - name: fix-gpu
      image: fedora:44
      command:
        - bash
        - -c
        - |
          [...]
      securityContext:
        privileged: true
