infra/k8s/jobs/gpu-info.yml
apiVersion: v1
kind: Pod
metadata:
  name: gpu-info
  namespace: realestate
spec:
  nodeSelector:
    kubernetes.io/hostname: inference
  hostPID: true
  restartPolicy: Never
  containers:
    - name: gpu-info
      image: fedora:44
      command:
        - bash
        - -c
        - |
          [...]
      securityContext:
        privileged: true
