infra/k8s/jobs/pvc-edit.yml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-edit
  namespace: realestate
spec:
  restartPolicy: Never
  automountServiceAccountToken: false
  nodeSelector:
    kubernetes.io/hostname: inference
  containers:
    - name: pvc-edit
      image: busybox:1.37
      command: ["sleep", "600"]
      volumeMounts:
        - name: models
          mountPath: /models
      resources:
        requests:
          cpu: 100m
          memory: 64Mi
          ephemeral-storage: 64Mi
        limits:
          cpu: 500m
          memory: 256Mi
          ephemeral-storage: 256Mi
  volumes:
    - name: models
      persistentVolumeClaim:
        claimName: ovms-models-pvc
