infra/k8s/jobs/reboot-node-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: node-reboot
  namespace: kube-system
spec:
  nodeSelector:
    kubernetes.io/hostname: inference
  tolerations:
    - operator: Exists
  hostPID: true
  restartPolicy: Never
  containers:
    - name: reboot
      image: busybox
      command: ["nsenter", "-t", "1", "-m", "-u", "-i", "-n", "--", "reboot"]
      securityContext:
        privileged: true
